src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(26, 24, 24);
  /* background-color: #111111; */
 
}

/* disable blue highlight (especially on mobile) */
input,
textarea,
button,
select,
div,
a {
  outline: none;
}

.burgerCross {
  color: white;
}

.logoutOption {
  cursor: pointer;
}

div {
  color: rgb(255, 255, 255);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a {
  display: inherit;
  text-decoration: none;
}

svg {
  fill: white;
  color: white;
  transition: all 0.05s ease-out;
  /* height: 30px;
  width: 30px; */
}

svg:hover {
  fill: rgb(117, 117, 117);
  transition: all 0.10s ease-in;
  cursor: pointer;
}

/* #pauseDesktop {
  height: 20px;
  width: 20px;
} */

/* #playDesktop {
  height: 20px;
  width: 20px;
} */

#metronomeNavButton {
  height: 30px;
  width: 30px;
  padding-top: 6px;
  padding-right: 5px;
}

#metronomeMain {
  height: 80px;
  width: 80px;
}

.screenTitle {
  /* color: rgb(255, 255, 255); */
  font-size: 2em;
  text-align: center;
}

.topButtons {
  display: flex;
  justify-content: space-between;
  padding-top: 10px;
  padding-right: 10px;
}

.secondButtons {
  display: flex;
  justify-content: flex-end;
  /* padding-top: 10px; */
  padding-top: 6px;
  padding-right: 10px;
}

.navButton {
  height: 38px !important;
  width: 38px !important;
  margin-left: 8px;
}

.toTheLeft {
  margin-right: auto;
}

.toTheRight {
  margin-left: auto;
}

.enablePointerEvents {
  pointer-events: all;
}

.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  /* height: 10vh; */
  /* background: rgba(128, 128, 128, 0.473); */
  /* pointer-events: none; */
}

.footerRow {
  display: flex;
}

.footerCenterTop {
  display: flex;
  flex-direction: row;
  justify-content: center;
  /* padding-left: 200px;
  padding-right: 200px; */
}

.footerCenterTop > div {  /* All divs inside of footerCenterTop will have this applied. Play/pause, next, prev, etc */
  margin-top: 5px;
  margin-bottom: 5px;
  /* margin-left: 8px;
  margin-right: 8px; */
  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

.footerCenterTopLeft {
  margin-left: 0px;
  margin-right: 10px;
}

.footerCenterItem {
  /* margin-left: 10px;
  margin-right: 10px; */
}

.footerCenterTopRight {
  margin-right: 0px;
  margin-left: 10px;
}

.footerControls {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 70px;
  padding: 10px 10px 10px 10px;
  backdrop-filter: blur(5px);
  background-color: rgba(156, 155, 155, 0.521);
  border-top: 0.5px solid rgba(56, 56, 56, 0.644);
  /* background-color: rgba(126, 124, 124, 0.521); */
  /* box-shadow: 0px 10px 40px 10px rgba(255, 255, 255, 0.568); */
}

.footerControlsMobile {
  display: flex;
  flex-direction: column;
}

.footerControlsMobileTop {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* min-height: 40px; */
  height: 52px;
  /* padding: 10px 10px 10px 10px; */
  backdrop-filter: blur(5px);
  background-color: rgba(156, 155, 155, 0.521);
}

.footerBox1 {
  display: flex;
  width: 40vw;
  min-width: 114px;
  /* border: 1px black solid; */
}

.footerBox1Mobile {
  display: flex;
  width: 62vw;
  min-width: 114px;
  /* border: 1px black solid; */
}

.footerBox2 {
  width: 100%;
  padding-left: 40px;
  padding-right: 40px;
}

.footerBox3 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 40vw;
  min-width: 114px;
  /* border: 1px black solid; */
  margin-top: auto;
  margin-bottom: auto;
}

.footerBox3Mobile {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  width: 40vw;
  min-width: 114px;
  /* border: 1px black solid; */
  margin-top: auto;
  margin-bottom: auto;
  padding-right: 8px;
}

.footerItemCenterMobile {
  margin-right: 14px;
  margin-left: 18px;
}

.footerItemRightMobile {
  margin-right: 12px;
}

.footerTextContainer {
  /* max-width: 98%; */
  /* width: 400px; */
  /* display: flex;
  flex-direction: column;
  justify-content: center; */
  width: 40vw;
  min-width: 40px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  /* border: 1px red solid; */
}

.footerTextContainer > div {
  max-width: 98%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.footerTextContainerMobile {
  /* max-width: 98%; */
  /* width: 400px; */
  letter-spacing: 0.6px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 62vw;
  min-width: 40px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  /* border: 1px red solid; */
}

.footerTextContainerMobile > div {
  max-width: 98%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-size: 13px;
}

/* .footerText {
  max-width: 98%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
} */

.footerArt {
  min-width: 52px;
  min-height: 52px;
  max-width: 52px;
  max-height: 52px;
  margin-top: auto;
  margin-bottom: auto;
  margin-right: 16px;
  margin-left: 6px;
}

.footerArtMobile {
  min-width: 52px;
  min-height: 52px;
  max-width: 52px;
  max-height: 52px;
  /* margin-top: auto;
  margin-bottom: auto; */
  margin-right: 5px;
  /* margin-left: 6px; */
}

/* .footerCenterBottom {
  display: flex;
  justify-content: row;
} */

.maxWidth {
  width: 100%
}

.playTimeEndTime {
  padding-top: 2px;
}

.controlsTop {
  display: flex;
  justify-content: space-between;
  /* border: black solid 1px; */
  flex-direction: row;
  background-color: rgba(156, 155, 155, 0.521);
  /* backdrop-filter: blur(5px); */
  /* border-top-left-radius: 25px;
  border-top-right-radius: 25px; */
}

.controlsBottom {
  display: flex;
  justify-content: space-between;
  /* border: black solid 1px; */
  flex-direction: row;
  background-color: rgba(156, 155, 155, 0.521);
  /* backdrop-filter: blur(5px); */
  /* border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px; */
}

.trackpadAndDuration {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width: 80vw;
  padding-left: 10px;
  padding-right: 10px;
}

.centerVertical {
  margin-top: auto;
  margin-bottom: auto;
}

.touchPaddingBottom {
  padding-bottom: 3.2px;
}

.touchPaddingTop {
  padding-top: 1.2px;
}

.touchPaddingTopMobile {
  padding-top: 0.8px;
}

.footerSlider {
  width: 100%;
  margin-left: 18px;
  margin-right: 18px;
}

.footerSliderMobile {
  width: 100%;
  /* height: 5px; */
  display: flex;
}

.footerTopLeft {
  display: flex;
  flex-direction: row;
}

.songNameAndArtist {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.controlsBPM {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.controlsDurations {
  display: flex;
  justify-content: space-between;
}

.footerIcon {
  height: 22px;
  width: 22px
}

.controlButton {
  margin-left: 6px;
  margin-right: 6px;
}

.collections {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.collectionImage {
  max-width: 21vw;
  max-height: 21vh;
  border-radius: 17px;
}

.centerThis {
  /* margin-left: auto;
  margin-right: auto;
  width: 8em */
  text-align: center;
}

.centerWithMargin {
  margin-left: auto;
  margin-right: auto;
}

.horizontalSlider {
  width: 47%;
  /* padding:10px; */
  margin-left: auto;
  margin-right: auto;
  height: 40px;
}

.exampleTrack {
  /* margin-left: auto;
  margin-right: auto; */
  height: 20px;
  width: 47%;
  background: grey;
  border-radius: 20px;
  position: absolute;
  margin: 0 auto;
  transform: translate(0, 50%)
}

.inner {
  position: absolute;
  margin: 0 auto;
  height: 40px;
}

.exampleThumb {
  height: 24px;
  width: 24px;
  border: 2px solid black;
  background: black;
  border-radius: 10px;
  position: absolute;
  margin: 0 auto;
  transform: translate(0, 25%);
}

.spaceAbove {
  margin-top: 30px;
}

.BPMText {
  font-size: 36px;
}

.BPMTapPad {
  margin: 0 auto;
  height: 136px;
  width: 136px;
  border: 2px solid black;
  border-radius: 12px;
  background-color: rgb(175, 175, 175)
}

.BPMTapPad:active {
  background-color: rgb(128, 123, 123);
}

.BPMTapPadText {
  padding: 25%;
  font-size: 17px;
}

.BPMLight {
  height: 60px;
  width: 60px;
  border: 1px solid grey;
  margin: auto;
  background-color: grey;
  border-radius:12px;
}

.BPMLightActive {
  height: 60px;
  width: 60px;
  border: 1px solid grey;
  margin: auto;
  background-color:Yellow;
  border-radius:12px;
}

.noSelect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

